Fixed text color bug in dark mode

--- a/backend/public/progress-up.css
+++ b/backend/public/progress-up.css
@@ -859,6 +859,10 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
+.dark .dark\:text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
 @media (min-width: 640px) {
 
   .sm\:-mx-6 {
